--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  width: 100vw;
 }
 body {
   margin: 0 auto;
